# preferred_item_service

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
preferred_item_service/: __main__.py  bootstrap.py  config.py
preferred_item_service/adapters/: aiohttp.py  item_service.py  master_data_service.py
preferred_item_service/domain/: entities.py  errors.py  helpers.py  ports.py  service.py  value_objects.py
tests/: conftest.py
tests/e2e/: test_http.py
tests/unit/: test_entities.py  test_service.py
