[tool.poetry]
name = "preferred-item-service"
version = "0.1.0"
description = ""
authors = ["Soj447 <30663195+Soj447@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "preferred_item_service"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
aiohttp = "^3.8.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.0.1"
black = "^23.1.0"
pre-commit = "^3.0.4"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
exclude = ['tests/']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
exclude = ['.venv', '__pycache__']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
